// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should send an event for two configured projects 1`] = `
Array [
  Array [
    "create",
    "_UA_PROJECT_ID_0_",
    "auto",
    Object {
      "allowLinker": false,
      "name": "_UA_PROJECT_ID_0_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_0_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_0_.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "_UA_PROJECT_ID_0_.require",
    "urlChangeTracker",
  ],
  Array [
    "_UA_PROJECT_ID_0_.send",
    "pageview",
  ],
  Array [
    "create",
    "_UA_PROJECT_ID_1_",
    "auto",
    Object {
      "allowLinker": false,
      "name": "_UA_PROJECT_ID_1_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_1_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_1_.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "_UA_PROJECT_ID_1_.require",
    "urlChangeTracker",
  ],
  Array [
    "_UA_PROJECT_ID_1_.send",
    "pageview",
  ],
  Array [
    "_UA_PROJECT_ID_0_.send",
    "pageview",
    undefined,
  ],
  Array [
    "_UA_PROJECT_ID_1_.send",
    "pageview",
    undefined,
  ],
]
`;

exports[`should setup a single UA project (without autotrack.js) 1`] = `
Array [
  Array [
    "create",
    "_UA_PROJECT_ID_",
    "auto",
    Object {
      "allowLinker": false,
      "name": "_UA_PROJECT_ID_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_.send",
    "pageview",
  ],
]
`;

exports[`should setup a single google UA project (no autolink) 1`] = `
Array [
  Array [
    "create",
    "_UA_PROJECT_ID_",
    "auto",
    Object {
      "allowLinker": false,
      "name": "_UA_PROJECT_ID_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "_UA_PROJECT_ID_.require",
    "urlChangeTracker",
  ],
  Array [
    "_UA_PROJECT_ID_.send",
    "pageview",
  ],
]
`;

exports[`should setup a single google UA project (with autolink) 1`] = `
Array [
  Array [
    "create",
    "_UA_PROJECT_ID_",
    "auto",
    Object {
      "allowLinker": true,
      "name": "_UA_PROJECT_ID_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_.require",
    "linker",
  ],
  Array [
    "_UA_PROJECT_ID_.linker:autoLink",
    Array [
      "www.domain1.at",
      "www.domain2.at",
    ],
  ],
  Array [
    "_UA_PROJECT_ID_.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "_UA_PROJECT_ID_.require",
    "urlChangeTracker",
  ],
  Array [
    "_UA_PROJECT_ID_.send",
    "pageview",
  ],
]
`;

exports[`should setup two google UA project (with autolink) 1`] = `
Array [
  Array [
    "create",
    "_UA_PROJECT_ID_0_",
    "auto",
    Object {
      "allowLinker": true,
      "name": "_UA_PROJECT_ID_0_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_0_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_0_.require",
    "linker",
  ],
  Array [
    "_UA_PROJECT_ID_0_.linker:autoLink",
    Array [
      "www.domain1.at",
      "www.domain2.at",
    ],
  ],
  Array [
    "_UA_PROJECT_ID_0_.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "_UA_PROJECT_ID_0_.require",
    "urlChangeTracker",
  ],
  Array [
    "_UA_PROJECT_ID_0_.send",
    "pageview",
  ],
  Array [
    "create",
    "_UA_PROJECT_ID_1_",
    "auto",
    Object {
      "allowLinker": true,
      "name": "_UA_PROJECT_ID_1_",
    },
  ],
  Array [
    "_UA_PROJECT_ID_1_.set",
    "anonymizeIp",
    true,
  ],
  Array [
    "_UA_PROJECT_ID_1_.require",
    "linker",
  ],
  Array [
    "_UA_PROJECT_ID_1_.linker:autoLink",
    Array [
      "www.domain3.at",
      "www.domain3.at",
    ],
  ],
  Array [
    "_UA_PROJECT_ID_1_.require",
    "cleanUrlTracker",
    Object {
      "indexFilename": "index.html",
      "queryDimensionIndex": 1,
      "stripQuery": true,
      "trailingSlash": "remove",
    },
  ],
  Array [
    "_UA_PROJECT_ID_1_.require",
    "urlChangeTracker",
  ],
  Array [
    "_UA_PROJECT_ID_1_.send",
    "pageview",
  ],
]
`;
